# Worms

./: .gitignore  CMakeLists.txt  README.md  compile-for-testing.sh
client/include/: ClientManager.h  EventSender.h  GameClient.h  MapInfo.h  PruebaClient.h  StartWindow.h  camara.h  client_juego.h  client_protocol.h  client_receiver.h  client_reciever.h  client_renderer.h  client_sender.h  createGameWindow.h  joinGameWindow.h  mainWindow.h  menuWindow.h  waitingWindow.h
client/include/engine/entities/: TexturePaths.h
client/include/engine/graphics/: Animation.h  Texture.h
client/include/engine/utils/: WorldScale.h
client/src/: ClientManager.cpp  EventSender.cpp  GameClient.cpp  PruebaClient.cpp  StartWindow.cpp  camara.cpp  client_juego.cpp  client_protocol.cpp  client_receiver.cpp  client_reciever.cpp  client_renderer.cpp  client_sender.cpp  createGameWindow.cpp  joinGameWindow.cpp  main.cpp  mainWindow.cpp  menuWindow.cpp  waitingWindow.cpp
client/src/engine/graphics/: Animation.cpp  Texture.cpp
client/src/engine/utils/: WorldScale.cpp
common_libs/include/: ActionFromClientEnum.h  ActionSVToCLEnum.h  ClientMessage.h  ClientRequest.h  InfoServer.h  MessageCoreGamesAvailables.h  ParseMapFromFile.h  PlayerInfoMessage.h  ProtectedQueue.h  Protocol.h  Pruebita.h  PublicEnum.h  ToClientMessage.h
common_libs/include/messages/server/: GameActionEnum.h  GameInfo.h  GameUpdate.h  InitGameEnum.h
common_libs/include/messages/sprites/: SpritesEnum.h
common_libs/include/messages/user_actions/: ActionType.h  UserAction.h  Weapon.h  WeaponID.h
common_libs/include/resources/: GrdEnum.h  SpritePath.h
common_libs/include/utils/: WorldScale.h
common_libs/src/: ClientRequest.cpp  InfoServer.cpp  MessageCoreServer.cpp  ParseMapFromFile.cpp  PlayerInfoMessage.cpp  Protocol.cpp  Pruebita.cpp
common_libs/src/messages/server/: GameInfo.cpp  GameUpdate.cpp
common_libs/src/messages/user_actions/: UserAction.cpp
common_libs/src/utils/: WorldScale.cpp
editor/include/: FactoryTexture.h  ToolBar.h  WriteOnDisk.h  dragAndDrop.h  mapEditor.h
editor/src/: FactoryTexture.cpp  ToolBar.cpp  WriteOnDisk.cpp  dragAndDrop.cpp  main.cpp  mapEditor.cpp
maps/: Mapa 1.txt  Mapa 3.txt  map_1.txt
server/include/: Client.h  ClientSender.h  CreateGameHandler.h  Game.h  GameWorld.h  Games.h  HandlerInitGame.h  MatchesMonitor.h  Server.h  TurnHandler.h  TurnMonitor.h
server/include/world/: GameWorld.h
server/include/world/entities/: EntitiesType.h  WBeam.h  WDeadWorm.h  WEntity.h  WProyectile.h  WWater.h  WWorm.h
server/include/world/instructions/: IWormInstruction.h  InstructionFactory.h
server/include/world/listeners/: ContactListener.h
server/src/: Client.cpp  ClientSender.cpp  CreateGameHandler.cpp  Game.cpp  GameWorld.cpp  Games.cpp  MatchesMonitor.cpp  Server.cpp  TurnHandler.cpp  TurnMonitor.cpp  main.cpp
server/src/world/: GameWorld.cpp
server/src/world/entities/: WBeam.cpp  WProyectile.cpp  WWorm.cpp
server/src/world/instructions/: InstructionFactory.cpp
testing/: README.md
testing/casos/01_single_player_join_only/: __client_0_args__  clients_schedule.sh
testing/casos/02_single_player_move/: clients_schedule.sh
testing/casos/03_two_players_attack/: __client_1_args__  clients_schedule.sh
testing/casos/04_two_players_move/: __client_0_args__  clients_schedule.sh
testing/casos/05_two_players_first_wins/: clients_schedule.sh
testing/salidas/01_single_player_join_only/: client_0_AtoB.dump  client_0_BtoA.dump
testing/salidas/02_single_player_move/: client_0_AtoB.dump  client_0_BtoA.dump
testing/salidas/03_two_players_attack/: client_0_AtoB.dump  client_0_BtoA.dump  client_1_BtoA.dump
testing/salidas/04_two_players_move/: client_0_AtoB.dump  client_0_BtoA.dump  client_1_AtoB.dump  client_1_BtoA.dump
testing/salidas/05_two_players_first_wins/: client_0_AtoB.dump  client_0_BtoA.dump  client_1_BtoA.dump
(+64 files in other folders)
